Preventing "sticky hover" for sliders on mobile
This prevents slider thumbs from having the hover state appearance
after a touch ends over them, if using a device that doesn't
support hovering.

--- a/sass/controls.scss
+++ b/sass/controls.scss
@@ -62,22 +62,33 @@ input[type="range"]::-ms-thumb {
   border: 0;
 }
 
-input[type="range"]::-webkit-slider-thumb:hover,
 input[type="range"]::-webkit-slider-thumb:active
 {
   background: $orange;
 }
 
-input[type="range"]::-moz-range-thumb:hover,
 input[type="range"]::-moz-range-thumb:active
 {
   background: $orange;
 }
 
-input[type="range"]::-ms-thumb:hover,
 input[type="range"]::-ms-thumb:active
 {
   background: $orange;
+}
+
+@media (hover) {
+  input[type="range"]::-webkit-slider-thumb:hover {
+    background: $orange;
+  }
+
+  input[type="range"]::-moz-range-thumb:hover {
+    background: $orange;
+  }
+
+  input[type="range"]::-ms-thumb:hover {
+    background: $orange;
+  }
 }
 
 input[type="range"]::-moz-focus-outer {
